--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body >
   <div class='top-container'>
     <img class="profile_pic"src="https://pbs.twimg.com/profile_images/1196142308707581952/MDQnzS8v_400x400.jpg" alt="">
-    <img class="topcloud"Src="images/cloud.png" alt="cloud">
+    <img class="topcloud"Src="cloud.png" alt="cloud">
     <h1>I'm Vinay.</h1>
     <p>a web developer.</p>
-    <img class="bottomcloud" src="images/cloud.png" alt="cloud">
-    <img src="images/mountain.png" alt="mountain">
+    <img class="bottomcloud" src="cloud.png" alt="cloud">
+    <img src="mountain.png" alt="mountain">
   </div>
   <div class="middle-container">
     <div class="profile">
