--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://twitter.com/vinnu987">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/vinay-kumar-narava-496527151/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/vinnu987">Twitter</a>
     <p>© 2020 Vinay Kumar Narava.</p>
   </div>
 
