--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Vinay Narava</title>
-  <link rel='Stylesheet' href="css/styles.css">
+  <link rel='Stylesheet' href="styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
@@ -13,11 +13,11 @@
 <body >
   <div class='top-container'>
     <img class="profile_pic"src="https://pbs.twimg.com/profile_images/1196142308707581952/MDQnzS8v_400x400.jpg" alt="">
-    <img class="topcloud"Src="images/cloud.png" alt="cloud">
+    <img class="topcloud"Src="cloud.png" alt="cloud">
     <h1>I'm Vinay.</h1>
     <h2>a web developer.</h2>
-    <img class="bottomcloud" src="images/cloud.png" alt="cloud">
-    <img src="images/mountain.png" alt="mountain">
+    <img class="bottomcloud" src="cloud.png" alt="cloud">
+    <img src="mountain.png" alt="mountain">
   </div>
   <div class="middle-container">
     <div class="profile">
